[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Daniel Saldivar", email = "daniel.saldivar.ds@gmail.com"},
]
dependencies = [
    "flet>=0.1.52",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
